# gann-sdk-js

./: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: native-cross-build.yml  publish-native-npm.yml  publish-sdk-npm.yml
examples/oai_ls_a2a/: .env.example  README.md  common.ts  general_chat_agent.ts  image_generation_agent.ts  package-lock.json  package.json
native/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/npm/darwin-x64/: README.md  package.json
native/npm/linux-x64-gnu/: README.md  package.json
native/npm/win32-x64-msvc/: README.md  package.json
native/scripts/: build.js  platform.js  prepublish.js  publish-platform.js
native/src/: lib.rs
src/: index.ts  quic.ts  quic_session.ts  signaling.ts
src/types/: shims-wrtc.d.ts
tests/: full_flow.ts
